--- a/head.html
+++ b/head.html
@@ -1,1 +1,3 @@
-<link rel="stylesheet" href="/style/style.css"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<script src="/scripts/scripts.js" type="module"></script>
+<link rel="stylesheet" href="/style/styles.css"/>
